package com.seproje.hospital.personel.vezne;

import com.seproje.hospital.auth.AuthUserRepository;

public interface VeznedarRepository extends AuthUserRepository<Veznedar> {
}
