package com.seproje.hospital.randevu;

import com.seproje.hospital.randevu.dto.RandevuOdemeDTO;

public interface RandevuService {

    RandevuOdemeDTO ucretHesaplaVeOdemeAl(Long randevuId);
}
